TypeSet can use 1 byte instead of 4 bytes for its m_seenTypes member variable https://bugs.webkit.org/show_bug.cgi?id=141204

Reviewed by Darin Adler.

There is no need to use 32 bits to store a TypeSet::RuntimeType set
bit-vector when the largest value for a single TypeSet::RuntimeType
is 0x80. 8 bits is enough to represent the set of seen types.

* dfg/DFGFixupPhase.cpp:
(JSC::DFG::FixupPhase::fixupNode):
* runtime/TypeSet.cpp:
(JSC::TypeSet::doesTypeConformTo):
* runtime/TypeSet.h:
(JSC::TypeSet::seenTypes):



Canonical link: https://commits.webkit.org/159267@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179621 268f45cc-cd09-0410-ab3c-d52691b4dbfc